--- a/WindChuckers.cfg
+++ b/WindChuckers.cfg
@@ -1,1 +1,4 @@
-#Wed May 17 10:46:13 CEST 2017
+#Wed May 17 16:55:47 CEST 2017
+>>>>>>>=branch 'master' of https\://github.com/Foxodg/WindChuckers.git
+<<<<<<<=HEAD
+=\=\=\=\=\=\=
