Fixed some bugs

--- a/WindChuckers.cfg
+++ b/WindChuckers.cfg
@@ -1,4 +1,8 @@
-#Mon May 29 17:04:54 CEST 2017
+#Tue May 30 15:47:00 CEST 2017
+Language=en
 >>>>>>>=branch 'master' of https\://github.com/Foxodg/WindChuckers.git
-<<<<<<<=HEAD
+StartClient=false
 =\=\=\=\=\=\=
+<<<<<<<=HEAD
+WebServer=127.0.0.1
+Port=5100
