New Login-Logic and Testclasses

--- a/.classpath
+++ b/.classpath
@@ -5,5 +5,6 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="lib" path="C:/Users/wel/WindChuckers/LibraryForInstall/h2-1.4.194.jar"/>
 	<classpathentry kind="lib" path="C:/Users/wel/WindChuckers/LibraryForInstall/simple-xml-2.7.1.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
