Änderung am Tower Array. Wird nun bei jeder Änderung angepasst. Kleine sonstige Änderungen und Korrekturen. Boolean GameStart ins Model versetzt. Variable ColorField gelöscht. Color kann vom Feld mit Get gezogen werden.
if(towers[x][y]!=null &&
towers[x][y].getColor().equals(field.getColor())){

--- a/.classpath
+++ b/.classpath
@@ -3,8 +3,8 @@
 	<classpathentry kind="src" path="Client"/>
 	<classpathentry kind="src" path="Server"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="lib" path="/Users/lukaskunz/git/WindChuckers/LibraryForInstall/h2-1.4.194.jar"/>
-	<classpathentry kind="lib" path="/Users/lukaskunz/git/WindChuckers/LibraryForInstall/simple-xml-2.7.1.jar"/>
+	<classpathentry kind="lib" path="C:/Users/robin/eclipse/Workspace/WindChuckers/LibraryForInstall/h2-1.4.194.jar"/>
+	<classpathentry kind="lib" path="C:/Users/robin/eclipse/Workspace/WindChuckers/LibraryForInstall/simple-xml-2.7.1.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
