Popup Fenster für neue Runde, rechts oder linke aufstellung, erstellt. Beschriftung der Towers disabled.

--- a/WindChuckers.cfg
+++ b/WindChuckers.cfg
@@ -1,5 +1,5 @@
-#Tue Jul 18 18:23:05 CEST 2017
-Language=en
+#Tue Jul 18 22:00:32 CEST 2017
+Language=de
 >>>>>>>=branch 'master' of https\://github.com/Foxodg/WindChuckers.git
 StartClient=false
 =\=\=\=\=\=\=
